@@ -42,19 +42,22 @@ package org.dspace.app.mediafilter;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 
-import org.pdfbox.cos.COSDocument;
+import org.apache.log4j.Logger;
 import org.pdfbox.pdfparser.PDFParser;
 import org.pdfbox.pdmodel.PDDocument;
 import org.pdfbox.util.PDFTextStripper;
 
 /*
- * 
+ *
  * to do: helpful error messages - can't find mediafilter.cfg - can't
  * instantiate filter - bitstream format doesn't exist
- *  
+ *
  */
 public class PDFFilter extends MediaFilter
 {
+
+    private static Logger log = Logger.getLogger(PDFFilter.class);
+
     public String getFilteredName(String oldFilename)
     {
         return oldFilename + ".txt";
@@ -62,7 +65,7 @@ public class PDFFilter extends MediaFilter
 
     /**
      * @return String bundle name
-     *  
+     *
      */
     public String getBundleName()
     {
@@ -88,7 +91,7 @@ public class PDFFilter extends MediaFilter
     /**
      * @param source
      *            source input stream
-     * 
+     *
      * @return InputStream the resulting input stream
      */
     public InputStream getDestinationStream(InputStream source)
@@ -97,17 +100,26 @@ public class PDFFilter extends MediaFilter
         // get input stream from bitstream
         // pass to filter, get string back
         PDFTextStripper pts = new PDFTextStripper();
-        PDFParser parser = new PDFParser(source);
+        PDFParser parser = null;
+        String extractedText = null;
 
-        parser.parse();
-
-        COSDocument cos = parser.getDocument();
-
-        String extractedText = pts
-                .getText(new PDDocument(parser.getDocument()));
-
-        // now close the pdf
-        cos.close();
+        try
+        {
+            parser = new PDFParser(source);
+            parser.parse();
+            extractedText = pts.getText(new PDDocument(parser.getDocument()));
+        }
+        finally
+        {
+            try
+            {
+                parser.getDocument().close();
+            }
+            catch(Exception e)
+            {
+               log.error("Error closing temporary PDF file: " + e.getMessage(), e);
+            }
+        }
 
         // if verbose flag is set, print out extracted text
         // to STDOUT
@@ -116,10 +128,13 @@ public class PDFFilter extends MediaFilter
             System.out.println(extractedText);
         }
 
+
         // generate an input stream with the extracted text
         byte[] textBytes = extractedText.getBytes();
         ByteArrayInputStream bais = new ByteArrayInputStream(textBytes);
 
         return bais; // will this work? or will the byte array be out of scope?
+
+
     }
 }
